crates/mcpkit-macros/tests/compile-fail/tool_missing_description.stderr
error: missing tool attributes
       help: add description, e.g., #[tool(description = "...")]
  --> tests/compile-fail/tool_missing_description.rs:10:5
   |
10 |     #[tool]
   |     ^^^^^^^
